--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,35 +1,15 @@
 {
   "compilerOptions": {
-    // Set the ECMAScript version to ES2020
-    "target": "ES2020",
-
-    // Use a custom module system called NodeNext
-    "module": "NodeNext",
-
-    // Use the nodenext module resolution strategy
-    "moduleResolution": "nodenext",
-
-    // Enable compatibility with modules that use `export =` syntax
-    "esModuleInterop": true,
-
-    // Allow importing JSON files as modules
-    "resolveJsonModule": true,
-
-    // Generate source maps for the compiled code
-    "sourceMap": true,
-
-    // Specify the directory where the compiled code will be outputted
+    "allowSyntheticDefaultImports": true,
+    "lib": ["ES2020"],
+    "module": "commonjs",
     "outDir": "./dist",
-
-    // Enable strict type checking rules
-    "strict": true
+    "moduleResolution": "node",
+    "target": "ES2020",
+    "strict": true,
+    "skipLibCheck": true,
+    "forceConsistentCasingInFileNames": true
   },
-
-  // Specify the files that should be included and excluded in the compilation process
-  "include": ["src/**/*.ts"],
-  "exclude": ["node_modules", "dist"],
-  "ts-node": {
-    // Tell ts-node CLI to install the --loader automatically
-    "esm": true
-  }
+  "include": ["./src"],
+  "exclude": ["*.test.ts"]
 }
